# ps-meli

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_strategic_modeling_framework.ipynb  01_phase_01_exploratory_data_analysis.ipynb  02_phase_02_feat_engineering_and_feat_analysis.ipynb  03_phase_03_model_selection_and_profit_opt.ipynb
notebooks/results/: phase_01_list_columns_keep_or_drop.csv  phase_01_pandas_insights.csv  phase_02_manual_features_descriptions.csv  stats_fraud_categorical.csv  stats_fraud_continuos.csv  woe_bins_categorical.csv
src/: __init__.py  eda.py  etl.py
src/models/: estimators.py  evaluation.py  model_selection.py
src/preprocessing/: custom_transformers.py  feature_engineering.py  pipeline_builder.py  statistics.py  utils.py  visualization.py
